# mini-claude-code

./: .env.example  .gitignore  .release-please-config.json  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml  release-publish.yml
src/mini_claude/: __init__.py  main.py
src/mini_claude/core/: __init__.py  config.py  context_manager.py  query_engine.py  types.py
src/mini_claude/llm/: __init__.py  anthropic_provider.py  openai_provider.py  provider.py
src/mini_claude/tools/: __init__.py  base.py  bash.py  glob_tool.py  read_file.py  registry.py  write_file.py
src/mini_claude/ui/: __init__.py  buddy.py  simple_repl.py
src/mini_claude/ui/tui/: __init__.py  app.py
tests/: test_tui_commands.py
