[project]
name = "mini-claude-code"
version = "0.1.0"
description = "A simplified AI Agent framework for learning Claude Code architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "rich>=13.0.0",
    "textual>=0.80.0",
    "python-dotenv>=1.0.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mini-claude = "mini_claude.main:main"

[tool.mypy]
strict = true
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
